	PR c++/22136 	* name-lookup.c (do_class_using_decl): Don't try to look up base 	classes in templates with dependent base types. 	PR c++/22136 	* g++.dg/template/using10.C: New test. 	* g++.dg/temlpate/using11.C: Likewise. 	* g++.dg/inherit/using5.C: Tweak error messages.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@110017 138bc75d-0d04-0410-961f-82ee72b054a4